--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -35,9 +36,10 @@
             </div>
             <div class="container">
                 <div class="hero__content">
-                <h1 class="title hero__title">Турецкий ремонт в Ростове-на-дону</h1>
+                <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span>
+                </h1>
                 <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
-                <button class="button hero__button button--primery">Рассчитать стоимость</button>
+                <button class="button hero__button button--primary">Рассчитать стоимость</button>
                 <button class="button hero__button button--outline">Отправить заявку</button>
                 </div>
                 <!-- /.hero__contant -->
